--- a/index.html
+++ b/index.html
@@ -4,80 +4,14 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8" />
-    <meta name="keywords" content="盛唐汽车内改装|汽车饰改装|房车改装|全顺改装|丰田赛纳改装|考斯特改装|碧莲改装|大众T5改装|路虎改装|奥迪改装|奔驰改装|桃木碳纤改装|汽车真皮座椅翻新改色|北京汽车改装/商务座椅改装/"
-    />
-    <meta name="description" content="盛唐汽车改装|汽车饰改装|房车改装|全顺改装|丰田赛纳改装|考斯特改装|碧莲改装|大众T5改装|路虎改装|奥迪改装|奔驰改装|桃木碳纤改装|汽车真皮座椅翻新改色|北京汽车改装"
-    />
+    <meta name="keywords" content="盛唐汽车内改装|汽车饰改装|房车改装|全顺改装|丰田赛纳改装|考斯特改装|碧莲改装|大众T5改装|路虎改装|奥迪改装|奔驰改装|桃木碳纤改装|汽车真皮座椅翻新改色|北京汽车改装/商务座椅改装/" />
+    <meta name="description" content="盛唐汽车改装|汽车饰改装|房车改装|全顺改装|丰田赛纳改装|考斯特改装|碧莲改装|大众T5改装|路虎改装|奥迪改装|奔驰改装|桃木碳纤改装|汽车真皮座椅翻新改色|北京汽车改装" />
     <base target="_blank" />
     <link rel="stylesheet" type="text/css" href="css/css.css" />
     <title>北京盛唐汽车改装|汽车内饰改装|房车改装|全顺改装|奔驰威霆改装|大众T6改装|大通改装|GMC改装|路虎改装|奥迪改装|奔驰改装|桃木碳纤改装|汽车真皮座椅翻新改色|北京汽车改装</title>
-    <script src="js/jquery.js"></script>
-    <script src="js/jquery.pngfix.pack.js"></script>
 </head>
+
 <body>
-<style>
-.bner {
-  overflow: hidden;
-  width: 100%;
-  position: relative;
-  margin: 50px auto;
-}
-.shutter-img {
-  z-index: 1;
-}
-.shutter-img,
-.shutter-img a {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-}
-.shutter-img a {
-  cursor: default;
-}
-.shutter-img a > img {
-  width: 100%;
-  height: 100%;
-}
-.shutter-img .created {
-  overflow: hidden;
-  position: absolute;
-  z-index: 20;
-}
-.shutter-btn li {
-  position: absolute;
-  z-index: 2;
-  top: 50%;
-  width: 49px;
-  height: 49px;
-  margin-top: -25px;
-  cursor: pointer;
-}
-.shutter-btn li.prev {
-  left: 20px;
-  background: url(images/shutter_prevBtn.png) no-repeat 0 -49px;
-}
-.shutter-btn li.next {
-  right: 20px;
-  background: url(images/shutter_nextBtn.png) no-repeat 0 -49px;
-}
-.shutter-desc {
-  position: absolute;
-  z-index: 2;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 36px;
-  background: url(images/shutter_shadow.png) repeat;
-}
-.shutter-desc p {
-  padding-left: 20px;
-  line-height: 36px;
-  color: #fff;
-  font-size: 14px;
-}    
-    </style>
     <div class="l">
         <div id="top">
             <div id="logo">
@@ -86,7 +20,7 @@
                 </a>
             </div>
             <div id="tr">
-                <img src="picture/tel.png" /> 010-87625550</div>
+                <img src="picture/tel.png" /> 18610800666</div>
             <ul id="menu">
                 <li>
                     <a id="0" href="/">首页</a>
@@ -144,7 +78,7 @@
 
                     <a href="list.asp?classid=14">
                         <dt>
-                            <img src="picture/201441510553596374.jpg" width="40" height="40" />
+                            <img src="picture/201422515265217289.jpg" width="40" height="40" />
                         </dt>
                         <dd>奔驰商务改装</dd>
                     </a>
@@ -186,7 +120,7 @@
 
                     <a href="list.asp?classid=1">
                         <dt>
-                            <img src="picture/20144161731382012.jpg" width="40" height="40" />
+                            <img src="picture/201441515515948858.jpg" width="40" height="40" />
                         </dt>
                         <dd>丰田塞纳改装</dd>
                     </a>
@@ -448,7 +382,7 @@
                             <dl class="tb_cen">
                                 <dt>
                                     <a href="/show.asp?id=382">
-                                        <img src="picture/2018331149181571.jpg" width="219" height="123" />
+                                        <img src="picture/201851116575721667.jpg" width="219" height="123" />
                                     </a>
                                 </dt>
                                 <dd>
@@ -603,18 +537,20 @@
         </div>
     </div>
 </body>
+<script src="js/jquery.js"></script>
 <script src="js/velocity.js"></script>
 <script src="js/shutter.js"></script>
 <script>
-$(function () {
-  $('.bner').shutter({
-    shutterW: $(window).width(),
-    shutterH: $(window).width()/3.368421052631579,
-	isAutoPlay: true, // 是否自动播放
-	playInterval: 3000, // 自动播放时间
-	curDisplay: 3, // 当前显示页
-	fullPage: false // 是否全屏展示
-  });
-});
+    $(function() {
+        $('.bner').shutter({
+            shutterW: $(window).width(),
+            shutterH: $(window).width() / 3.368421052631579,
+            isAutoPlay: true, // 是否自动播放
+            playInterval: 3000, // 自动播放时间
+            curDisplay: 3, // 当前显示页
+            fullPage: false // 是否全屏展示
+        });
+    });
 </script>
+
 </html>
